src/test/ui/pattern/usefulness/tuple-struct-nonexhaustive.stderr
error[E0004]: non-exhaustive patterns: `Foo(_, _)` not covered
  --> $DIR/tuple-struct-nonexhaustive.rs:5:11
   |
LL |     match x {
   |           ^ pattern `Foo(_, _)` not covered
   |
note: `Foo` defined here
  --> $DIR/tuple-struct-nonexhaustive.rs:1:8
   |
LL | struct Foo(isize, isize);
   |        ^^^
   = note: the matched value is of type `Foo`
help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   |
LL ~         Foo(2, b) => println!("{}", b)
LL +         Foo(_, _) => todo!()
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
